# spec-kit

./: .copilotignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QWEN.md  README.md  analysis-project.md  feature-spec-driven.md  features.md  git-workflow-design.md  pyproject.toml  skills.md  spec-driven.md  update.patch
.ai/: instructions.md  instructions.md-2026-02-02  instructions.md-2026-02-10
.ai/tools/: mcp.md  project.md  shell.md  system.md
.claude/: settings.local.json
.claude/commands/: speckit.agents.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.skills.md  speckit.specify.md  speckit.tasks.md  speckit.tools.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.specify/: instructions.md
docs/: agent-skills-spec.md  installation.md  local-development.md  overview.md  quickstart.md  security.md  spec-driven.md  upgrade.md  upsream.md  upstream.md  usage.md  vibe-coding.md
memory/: constitution.md  feature-index.md  features.md  skills.md
scripts/: generate_vscode_settings.py
templates/: agent-ask-template.md  agent-common-template.md  agent-plan-template.md  agent-role-module-designer-template.md  consitution-template.md  feature-details-template.md  instructions-template.md  plan-template.md  requirements-template.md  review-template.md  skills-template.md  tasks-template.md  tool-project-script-template.md  tool-shell-function-template.md  tool-system-binary-template.md  verification-log-template.md
tests/: conftest.py  script_api.py
(+599 files in other folders)
