[project]
name = "specify-cli"
version = "0.0.22"
description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4; python_version >= '3.10'",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.sources]
"src" = "specify_cli"

[tool.hatch.build.targets.wheel.force-include]
"memory" = "specify_cli/memory"
"scripts" = "specify_cli/scripts"
"templates" = "specify_cli/templates"
"skills" = "specify_cli/skills"
